# generic-poa

./: Cargo.toml  README.md
examples/: entries.csv  entries.tsv
src/: alignment.rs  args.rs  consensus.rs  graph.rs  io.rs  main.rs
